logs/ecc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ecc'...
Compiling './lib/python3.5/site-packages/ecc/Key.py'...
***   File "./lib/python3.5/site-packages/ecc/Key.py", line 217
    raise ValueError, "Invalid Key ID"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecc/curves.py'...
***   File "./lib/python3.5/site-packages/ecc/curves.py", line 19
    192 : (0xfffffffffffffffffffffffffffffffeffffffffffffffffL,
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecc/eccrypt.py'...
***   File "./lib/python3.5/site-packages/ecc/eccrypt.py", line 34
    raise ValueError, "Key size %s not suitable for encryption" % bits
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecc/ecdsa.py'...
***   File "./lib/python3.5/site-packages/ecc/ecdsa.py", line 26
    raise ValueError, "Key size %s not implemented" % bits
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecc/encoding.py'...
***   File "./lib/python3.5/site-packages/ecc/encoding.py", line 161
    raise RuntimeError, "Cannont exit top level Decoder"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecc/performance.py'...
***   File "./lib/python3.5/site-packages/ecc/performance.py", line 39
    print title
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ecc-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
